--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <label for="class">Class</label>
       <select id="class" required>
-        <option value="economy">Economy</option>
+        <option value="economy">general</option>
         <option value="business">Business</option>
         <option value="first">First Class</option>
       </select>
@@ -38,3 +38,4 @@
   </div>
 </body>
 </html>
+
